--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -3,74 +3,77 @@
 @*@inject CustomerRepository customerRepo*@
 @inject ICustomerRepository customerRepo
 
-<h3>All customers</h3>
-
-@if (customers.Any())
-{
 <div class="container">
-    <div class="row m-5">
-        <div class="col-5 bg-light m-2 justify-content-start">
-            <div class="p-3 mb-3 bg-secondary text-white text-center">
-                Add new Customer
-            </div>
-            <EditForm Model="@NewCustomer" OnValidSubmit="@AddNewCustomer">
-                <DataAnnotationsValidator />
-                <ValidationSummary />
-                <div class="form-group">
-                    @*Binder respektive värde nedanför till objektet NewEmployee*@
-                    <label for="name">Name</label>
-                    <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Name" />
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone</label>
-                    <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Phone" />
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Email" />
-                </div>
-
-                <div class="text-center p-3 mb-3">
-                    <button class="btn btn-info" type="submit">Add Customer</button>
-                </div>
-            </EditForm>
+  <div class="row m-5">
+    <div class="col-5 bg-light m-2 justify-content-start">
+      <div class="p-3 mb-3 bg-secondary text-white text-center">
+        Add new Customer
+      </div>
+      <EditForm Model="@NewCustomer" OnValidSubmit="@AddNewCustomer">
+        <DataAnnotationsValidator />
+        <ValidationSummary />
+        <div class="form-group">
+          @*Binder respektive värde nedanför till objektet NewEmployee*@
+          <label for="name">Name</label>
+          <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Name" />
         </div>
-        @if (editCustomer) 
-        {
-        <div class="col-5 bg-light m-2 justify-content-start">
-            <div class="p-3 mb-3 bg-secondary text-white text-center">
-                Edit Customer
-            </div>
-            <EditForm Model="@UpdateCustomer" OnValidSubmit="(() => EditCustomer())">
-                <DataAnnotationsValidator />
-                <ValidationSummary />
-                <div class="form-group">
-                    @*Binder respektive värde nedanför till objektet NewEmployee*@
-                    <label for="name">Name</label>
-                    <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Name" />
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone</label>
-                    <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Phone" />
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Email" />
-                </div>
-
-                <div class="text-center p-3 mb-3">
-                    <button class="btn btn-info" type="submit">Edit Customer</button>
-                </div>
-            </EditForm>
+        <div class="form-group">
+          <label for="phone">Phone</label>
+          <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Phone" />
         </div>
-        }
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Email" />
+        </div>
+
+        <div class="text-center p-3 mb-3">
+          <button class="btn btn-info" type="submit">Add Customer</button>
+        </div>
+      </EditForm>
     </div>
 
-    <div class="row m-5">
 
+    @if (UpdateCustomer.Id > 0)
+    {
+      <div class="col-5 bg-light m-2 justify-content-start">
+        <div class="p-3 mb-3 bg-secondary text-white text-center">
+          Edit Customer
+        </div>
+        <EditForm Model="@UpdateCustomer" OnValidSubmit="(() => EditCustomer())">
+          <DataAnnotationsValidator />
+          <ValidationSummary />
+          <div class="form-group">
+            @*Binder respektive värde nedanför till objektet NewEmployee*@
+            <label for="name">Name</label>
+            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Name" />
+          </div>
+          <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Phone" />
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Email" />
+          </div>
+
+          <div class="text-center p-3 mb-3">
+            <button class="btn btn-info" type="submit">Edit Customer</button>
+          </div>
+        </EditForm>
+      </div>
+
+    }
+  </div>
+
+  <h3>All customers</h3>
+
+  @if (customers.Any())
+  {
+
+    <div class="row m-5">
     </div>
 
-</div>
+
     <table class="table table-bordered">
       <thead class="thead-dark">
         <tr>
@@ -88,13 +91,13 @@
         @foreach (var cust in customers)
         {
           <tr>
-              <td>@cust.Name</td>
-              <td>@cust.Phone</td>
-              <td>@cust.Email</td>
-              <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders(cust))">Show </button></td>
-              <td><button class="btn btn-info" @onclick="(() => SetCustomerForActiveOrders(cust))">Show</button></td>
-              <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit(cust))">Edit</button></td>
-              <td><button class="btn btn-danger" @onclick="(() => DeleteCustomer(cust))">Delete</button></td>
+            <td>@cust.Name</td>
+            <td>@cust.Phone</td>
+            <td>@cust.Email</td>
+            <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders(cust))">Show </button></td>
+            <td><button class="btn btn-info" @onclick="(() => SetCustomerForActiveOrders(cust))">Show</button></td>
+            <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit(cust))">Edit</button></td>
+            <td><button class="btn btn-danger" @onclick="(() => DeleteCustomer(cust))">Delete</button></td>
           </tr>
           <tr>
 
@@ -103,63 +106,63 @@
               @if (dispatchedOrders.Any())
               {
                 int counter = 0;
-            <td colspan="7">
+                <td colspan="7">
 
 
-              @foreach (var order in dispatchedOrders)
-              {
-                <table class="table table-bordered">
-                  @if (cust.Id == order.CustomerId)
+                  @foreach (var order in dispatchedOrders)
                   {
+                    <table class="table table-bordered">
+                      @if (cust.Id == order.CustomerId)
+                      {
 
-                    @if (counter == 0)
-                    {
-                      <p>Dispatched orders</p>
+                        @if (counter == 0)
+                        {
+                          <p>Dispatched orders</p>
 
-                      <thead class="thead-dark">
-                        <tr>
-                          <th>OrderDate</th>
-                          <th>Delivery Address</th>
-                          <th>Payment done</th>
-                          <th>Dispatched</th>
-                        </tr>
-                      </thead>
-                    }
+                          <thead class="thead-dark">
+                            <tr>
+                              <th>OrderDate</th>
+                              <th>Delivery Address</th>
+                              <th>Payment done</th>
+                              <th>Dispatched</th>
+                            </tr>
+                          </thead>
+                        }
 
 
-                    <tbody>
-                      <tr>
-                        <td>@order.OrderDate</td>
-                        <td>@order.DeliveryAddress</td>
-                        <td>
-                          @if (order.PaymentCompleted == true)
-                          {
-                            <p>Paid</p>
-                          }
-                          else
-                          {
-                            <p>Not paid</p>
-                          }
-                        </td>
-                        <td>
-                          @if (order.Dispatched == true)
-                          {
-                            <p>Dispatched</p>
-                          }
-                          else
-                          {
-                            <p>Not dispatched</p>
-                          }
-                        </td>
-                      </tr>
-                    </tbody>
+                        <tbody>
+                          <tr>
+                            <td>@order.OrderDate</td>
+                            <td>@order.DeliveryAddress</td>
+                            <td>
+                              @if (order.PaymentCompleted == true)
+                              {
+                                <p>Paid</p>
+                              }
+                              else
+                              {
+                                <p>Not paid</p>
+                              }
+                            </td>
+                            <td>
+                              @if (order.Dispatched == true)
+                              {
+                                <p>Dispatched</p>
+                              }
+                              else
+                              {
+                                <p>Not dispatched</p>
+                              }
+                            </td>
+                          </tr>
+                        </tbody>
 
+                      }
+                    </table>
+                    counter++;
                   }
-                </table>
-                counter++;
-              }
 
-            </td>
+                </td>
               }
               else if (DispatchedCustomer.Id == cust.Id)
               {
@@ -235,125 +238,126 @@
     </table>
 
 
-    
-}
-else if (loadFailed)
-{
-  <h3>Sorry, something went wrong when loading customers.</h3>
-}
-else
-{
-  <h3>Loading...</h3>
-}
-
-@code {
-  private List<Customer> customers;
-  private List<Order> dispatchedOrders;
-  private List<Order> activeOrders;
-  private bool loadFailed;
-  Customer NewCustomer = new Customer();
-  Customer UpdateCustomer = new Customer();
-  Customer DispatchedCustomer = new Customer();
-  Customer ActiveCustomer = new Customer();
-
-  /// <summary>
-  /// Overriding OnInitializedAsync method for diplaying Customers.
-  /// </summary>
-  /// <returns></returns>
-  protected override async Task OnInitializedAsync()
-  {
-    customers = await customerRepo.GetCustomerAsync();
   }
-
-  /// <summary>
-  /// Add a new Cutomer by calling the repository. Create a new object to erase the old.
-  /// </summary>
-  /// <returns></returns>
-  private async Task AddNewCustomer()
+  else if (loadFailed)
   {
-    try
-    {
-      loadFailed = false;
-      await customerRepo.AddCustomerAsync(NewCustomer);
-      NewCustomer = new Customer();
-      await UpdateGUI();
+    <h3>Sorry, something went wrong when loading customers.</h3>
+  }
+  else
+  {
+    <h3>Loading...</h3>
+  }
+</div>
+
+
+    @code {
+      private List<Customer> customers;
+      private List<Order> dispatchedOrders;
+      private List<Order> activeOrders;
+      private bool loadFailed;
+      Customer NewCustomer = new Customer();
+      Customer UpdateCustomer = new Customer();
+      Customer DispatchedCustomer = new Customer();
+      Customer ActiveCustomer = new Customer();
+
+      /// <summary>
+      /// Overriding OnInitializedAsync method for diplaying Customers.
+      /// </summary>
+      /// <returns></returns>
+      protected override async Task OnInitializedAsync()
+      {
+        customers = await customerRepo.GetCustomerAsync();
+      }
+
+      /// <summary>
+      /// Add a new Cutomer by calling the repository. Create a new object to erase the old.
+      /// </summary>
+      /// <returns></returns>
+      private async Task AddNewCustomer()
+      {
+        try
+        {
+          loadFailed = false;
+          await customerRepo.AddCustomerAsync(NewCustomer);
+          NewCustomer = new Customer();
+          await UpdateGUI();
+        }
+        catch (Exception ex)
+        {
+          loadFailed = true;
+        }
+      }
+
+      /// <summary>
+      /// Delete a customer by calling method in repository.
+      /// </summary>
+      /// <param name="customer"></param>
+      /// <returns></returns>
+      private async Task DeleteCustomer(Customer customer)
+      {
+        await customerRepo.DeleteCustomerAsync(customer);
+        await UpdateGUI();
+      }
+
+      /// <summary>
+      /// Setting customer for edit.
+      /// </summary>
+      /// <param name="selected">Customer to set to object in method</param>
+      private void SetCustomerForEdit(Customer selected)
+      {
+        UpdateCustomer = selected;
+      }
+      /// <summary>
+      /// Edit a customer by calling method in repository.
+      /// </summary>
+      /// <returns></returns>
+      private async Task EditCustomer()
+      {
+        await customerRepo.EditCustomerAsync(UpdateCustomer);
+        UpdateCustomer = new Customer();
+        await UpdateGUI();
+      }
+
+      /// <summary>
+      /// Sets customer to show active orders and then showing dispatched orders by calling method in repository. Setting active customer to new to not display the active customer on the page.
+      /// </summary>
+      /// <param name="selected">Customer to set to object in method</param>
+      /// <returns></returns>
+      public async Task SetCustomerForDispatchedOrders(Customer selected)
+      {
+        if (activeOrders != null)
+        {
+          activeOrders.Clear();
+        }
+        ActiveCustomer = new Customer();
+        DispatchedCustomer = selected;
+        dispatchedOrders = await customerRepo.ShowDispatchedOrdersByCustomer(DispatchedCustomer);
+        await UpdateGUI();
+      }
+
+      /// <summary>
+      /// Sets customer to show active order and then showing active orderse by calling method in repository. Setting active customer to new to not display the active customer on the page.
+      /// </summary>
+      /// <param name="selected">Customer to set to object in method</param>
+      /// <returns></returns>
+      public async Task SetCustomerForActiveOrders(Customer selected)
+      {
+        if (dispatchedOrders != null)
+        {
+          dispatchedOrders.Clear();
+        }
+        DispatchedCustomer = new Customer();
+        ActiveCustomer = selected;
+        activeOrders = await customerRepo.ShowActiveOrdersByCustomer(ActiveCustomer);
+        await UpdateGUI();
+      }
+
+      /// <summary>
+      /// Updates the GUI by fetching from database async.
+      /// </summary>
+      /// <returns></returns>
+      private async Task UpdateGUI()
+      {
+        customers = await customerRepo.GetCustomerAsync();
+      }
     }
-    catch (Exception ex)
-    {
-      loadFailed = true;
-    }
-  }
-
-  /// <summary>
-  /// Delete a customer by calling method in repository.
-  /// </summary>
-  /// <param name="customer"></param>
-  /// <returns></returns>
-  private async Task DeleteCustomer(Customer customer)
-  {
-    await customerRepo.DeleteCustomerAsync(customer);
-    await UpdateGUI();
-  }
-
-  /// <summary>
-  /// Setting customer for edit.
-  /// </summary>
-  /// <param name="selected">Customer to set to object in method</param>
-  private void SetCustomerForEdit(Customer selected)
-  {
-    UpdateCustomer = selected;
-  }
-  /// <summary>
-  /// Edit a customer by calling method in repository.
-  /// </summary>
-  /// <returns></returns>
-  private async Task EditCustomer()
-  {
-    await customerRepo.EditCustomerAsync(UpdateCustomer);
-    UpdateCustomer = new Customer();
-    await UpdateGUI();
-  }
-
-  /// <summary>
-  /// Sets customer to show active orders and then showing dispatched orders by calling method in repository. Setting active customer to new to not display the active customer on the page.
-  /// </summary>
-  /// <param name="selected">Customer to set to object in method</param>
-  /// <returns></returns>
-  public async Task SetCustomerForDispatchedOrders(Customer selected)
-  {
-    if (activeOrders != null)
-    {
-      activeOrders.Clear();
-    }
-    ActiveCustomer = new Customer();
-    DispatchedCustomer = selected;
-    dispatchedOrders = await customerRepo.ShowDispatchedOrdersByCustomer(DispatchedCustomer);
-    await UpdateGUI();
-  }
-
-  /// <summary>
-  /// Sets customer to show active order and then showing active orderse by calling method in repository. Setting active customer to new to not display the active customer on the page.
-  /// </summary>
-  /// <param name="selected">Customer to set to object in method</param>
-  /// <returns></returns>
-  public async Task SetCustomerForActiveOrders(Customer selected)
-  {
-    if (dispatchedOrders != null)
-    {
-      dispatchedOrders.Clear();
-    }
-    DispatchedCustomer = new Customer();
-    ActiveCustomer = selected;
-    activeOrders = await customerRepo.ShowActiveOrdersByCustomer(ActiveCustomer);
-    await UpdateGUI();
-  }
-
-  /// <summary>
-  /// Updates the GUI by fetching from database async.
-  /// </summary>
-  /// <returns></returns>
-  private async Task UpdateGUI()
-  {
-    customers = await customerRepo.GetCustomerAsync();
-  }
-}
